@@ -1,4 +1,4 @@
-package test.failedreporter.issue1297.groups;
+package test.failedreporter.issue1297.depend_on_group;
 
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
@@ -6,7 +6,7 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.BeforeTest;
 import test.failedreporter.FailedReporterTest;
 
-public class GroupsSampleBase {
+public class GroupDependSampleBase {
   @BeforeTest(groups = FailedReporterTest.DEPENDENT_GROUP)
   public void baseBeforeTest() {}
 
